feat: enumerate search results and dialog header

--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -9,6 +9,5 @@
 
 <app-paragraph-dialog
   [(isVisible)]="showParagraph"
-  [workId]="workId"
-  [match]="match"
+  [info]="matchInfo"
 ></app-paragraph-dialog>
