--- a/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
@@ -2,17 +2,15 @@
   [(visible)]="isVisible"
   [modal]="true"
   (onHide)="onHide()"
-  header="{{
-    'SEARCH.RESULTS.PAGES' | translate : { pages: match.pages.join(', ') }
-  }}"
+  header="{{ info.workTitle }} #{{ info.index }}"
 >
-  <div class="max-w-600" [innerHTML]="match.text | normalMode"></div>
+  <div class="max-w-600" [innerHTML]="info.match.text | normalMode"></div>
 
   <div class="flex justify-content-end">
     <p-button
       styleClass="p-button-secondary"
       [routerLink]="['/read/text/', workId]"
-      fragment="paragraph-{{ match.paragraphId }}"
+      fragment="paragraph-{{ info.match.paragraphId }}"
       pTooltip="{{ 'SEARCH.RESULTS.GO_TO_TEXT_TOOLTIP' | translate }}"
     >
       <div class="mt-1">
