--- a/src/app/search/presentational/result-item/result-item.component.html
+++ b/src/app/search/presentational/result-item/result-item.component.html
@@ -2,7 +2,7 @@
   <p-card>
     <ng-template pTemplate="subtitle">
       <div class="flex justify-content-between">
-        <div>{{ workTitle }}</div>
+        <div>{{ workTitle }} #{{ index }}</div>
 
         <div>
           {{
