--- a/src/app/common/shared/input-group/input-group.component.html
+++ b/src/app/common/shared/input-group/input-group.component.html
@@ -1,18 +1,28 @@
-<div class="grid col-12 flex align-items-center">
-  <div class="col-3">
+<div class="grid">
+  <div class="col-3 mt-3">
     <label for="{{ idString }}">
       {{ i18nString + "_LABEL" | translate }}
     </label>
   </div>
 
-  <div class="col-8">
-    <ng-content></ng-content>
-  </div>
+  <ng-container *ngIf="hasIcon">
+    <div class="col-8">
+      <ng-content></ng-content>
+    </div>
+  </ng-container>
 
-  <div class="col-1">
-    <i
-      class="pi pi-info-circle"
-      pTooltip="{{ i18nString + '_INFO' | translate }}"
-    ></i>
-  </div>
+  <ng-container *ngIf="!hasIcon">
+    <div class="col-9">
+      <ng-content></ng-content>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="hasIcon">
+    <div class="col-1">
+      <i
+        class="pi pi-info-circle"
+        pTooltip="{{ i18nString + '_INFO' | translate }}"
+      ></i>
+    </div>
+  </ng-container>
 </div>
