feat: multiple small adjustments

--- a/src/app/search/presentational/advanced-input/advanced-input.component.html
+++ b/src/app/search/presentational/advanced-input/advanced-input.component.html
@@ -4,6 +4,7 @@
       <app-input-group
         idString="scope-dropdown"
         i18nString="SEARCH.INPUT.SCOPE"
+        [hasIcon]="true"
       >
         <p-dropdown
           id="scope-dropdown"
