--- a/src/app/common/shared/input-group/input-group.component.html
+++ b/src/app/common/shared/input-group/input-group.component.html
@@ -5,20 +5,12 @@
     </label>
   </div>
 
-  <ng-container *ngIf="hasIcon">
-    <div class="col-8">
-      <ng-content></ng-content>
-    </div>
-  </ng-container>
-
-  <ng-container *ngIf="!hasIcon">
-    <div class="col-9">
-      <ng-content></ng-content>
-    </div>
-  </ng-container>
+  <div [ngClass]="hasIcon ? 'col-8' : 'col-9'">
+    <ng-content></ng-content>
+  </div>
 
   <ng-container *ngIf="hasIcon">
-    <div class="col-1">
+    <div class="col-1 mt-3">
       <i
         class="pi pi-info-circle"
         pTooltip="{{ i18nString + '_INFO' | translate }}"
