--- a/src/app/search/presentational/simple-input/simple-input.component.html
+++ b/src/app/search/presentational/simple-input/simple-input.component.html
@@ -1,10 +1,11 @@
 <div class="flex justify-content-between mb-2">
   <div class="mt-2">
-    {{ "SEARCH.INPUT.SELECTED_WORKS" | translate }}: {{ selectedWorksCount }}
+    {{ selectedWorksCount }} {{ "SEARCH.INPUT.WORKS_SELECTED" | translate }}
   </div>
 
   <div>
     <p-button
+      styleClass="p-button-secondary"
       label="{{ 'SEARCH.INPUT.SELECT_WORKS' | translate }}"
       (onClick)="showWorksMenu = true"
     ></p-button>
