fix: use strict filter mode

--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -3,6 +3,7 @@
     <p-tree
       [value]="(nodes$ | async) || []"
       [filter]="true"
+      filterMode="strict"
       [selectionMode]="mode"
       [(selection)]="selection"
       (onNodeSelect)="onNodeSelect($event)"
