--- a/src/app/read/container/toc/toc.component.html
+++ b/src/app/read/container/toc/toc.component.html
@@ -1,4 +1,4 @@
 <app-works-menu
   [useCheckbox]="false"
-  (onSelectionChange)="showText($event)"
+  (selectionChangeEmitter)="showText($event)"
 ></app-works-menu>
