--- a/src/app/search/presentational/simple-input/simple-input.component.html
+++ b/src/app/search/presentational/simple-input/simple-input.component.html
@@ -30,6 +30,6 @@
 <p-dialog [(visible)]="showWorksMenu" [modal]="true">
   <app-works-menu
     [useCheckbox]="true"
-    (onSelectionChange)="onWorksChange($event)"
+    (selectionChangeEmitter)="onWorksChange($event)"
   ></app-works-menu>
 </p-dialog>
