--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -1,13 +1,22 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
+    <p-button
+      class="mr-2"
+      label="{{ 'SEARCH.INPUT.SELECT_WORKS_ALL' | translate }}"
+      (onClick)="onSelectAll()"
+    ></p-button>
+
+    <p-button
+      label="{{ 'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate }}"
+      (onClick)="onRemoveAll()"
+    ></p-button>
+
     <p-tree
       [value]="(nodes$ | async) || []"
       [filter]="true"
       filterMode="strict"
       [selectionMode]="mode"
-      [(selection)]="selection"
-      (onNodeSelect)="onNodeSelect($event)"
-      (onNodeUnselect)="onNodeUnselect()"
+      (selectionChange)="onSelectionChange($event)"
     >
       <ng-template pTemplate="default" let-node>
         {{ node.label | translate }}
