refactor: reorganize works-menu comp and store

--- a/src/app/read/container/toc/toc.component.html
+++ b/src/app/read/container/toc/toc.component.html
@@ -1,4 +1,1 @@
-<app-works-menu
-  [useCheckbox]="false"
-  (selectionChangeEmitter)="showText($event)"
-></app-works-menu>
+<app-works-menu (selectionChangeEmitter)="showText($event)"></app-works-menu>
