--- a/src/app/admin/upload/upload.component.html
+++ b/src/app/admin/upload/upload.component.html
@@ -3,10 +3,7 @@
 </p-blockUI>
 
 <div class="flex justify-content-center">
-  <app-works-menu
-    [useCheckbox]="false"
-    (selectionChangeEmitter)="setWorkId($event)"
-  ></app-works-menu>
+  <app-works-menu (selectionChangeEmitter)="setWorkId($event)"></app-works-menu>
 
   <div class="mr-2"></div>
 
