--- a/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
+++ b/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <p-tree
-      [value]="(nodes$ | async) || []"
+      [value]="nodes"
       [filter]="true"
       filterMode="strict"
       selectionMode="checkbox"
