--- a/src/app/search/presentational/simple-input/simple-input.component.html
+++ b/src/app/search/presentational/simple-input/simple-input.component.html
@@ -34,6 +34,7 @@
   [header]="'SEARCH.INPUT.SELECT_WORKS' | translate"
 >
   <app-checkbox-works-menu
+    [nodes]="nodes"
     (selectionChangeEmitter)="onWorksChange($event)"
   ></app-checkbox-works-menu>
 </p-dialog>
