--- a/src/app/search/container/search/search.component.html
+++ b/src/app/search/container/search/search.component.html
@@ -6,25 +6,20 @@
       (searchStringChangeEmitter)="onSearchStringChange($event)"
     ></app-simple-input>
 
-    <div class="mr-2"></div>
-
     <app-advanced-input
       (optionsChangeEmitter)="onOptionsChange($event)"
     ></app-advanced-input>
 
-    <div class="mr-2"></div>
-
-    <div class="flex justify-content-center">
-      <p-button
-        type="submit"
-        label="{{ 'SEARCH.INPUT.BUTTON_LABEL' | translate }}"
-        [disabled]="(canSearch$ | async) || true"
-        pTooltip="{{
-          (canSearch$ | async) || true
-            ? ('SEARCH.INPUT.BUTTON_TOOLTIP' | translate)
-            : ''
-        }}"
-      ></p-button>
-    </div>
+    <p-button
+      styleClass="w-full"
+      type="submit"
+      label="{{ 'SEARCH.INPUT.BUTTON_LABEL' | translate }}"
+      [disabled]="(canSearch$ | async) || true"
+      pTooltip="{{
+        (canSearch$ | async) || true
+          ? ('SEARCH.INPUT.BUTTON_TOOLTIP' | translate)
+          : ''
+      }}"
+    ></p-button>
   </div>
 </div>
