fix: fix upwards propagation of search terms

--- a/src/app/search/presentational/simple-input/simple-input.component.html
+++ b/src/app/search/presentational/simple-input/simple-input.component.html
@@ -19,7 +19,8 @@
       class="w-full"
       type="text"
       placeholder="{{ 'SEARCH.INPUT.SEARCH_STRING_PLACEHOLDER' | translate }}"
-      (input)="onSearchStringChange($event)"
+      [(ngModel)]="searchString"
+      (ngModelChange)="onSearchStringChange()"
     />
   </app-input-group>
 </p-panel>
