fix: fix selection change event for single select

--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -4,7 +4,8 @@
       [value]="nodes"
       [filter]="true"
       filterMode="strict"
-      (selectionChange)="onSelectionChange($event)"
+      selectionMode="single"
+      (onNodeSelect)="onNodeSelect($event)"
     >
       <ng-template pTemplate="default" let-node>
         {{ node.label | translate }}
