feat: improve results page

--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="isLoaded$ | async">
   <app-result-list
     [workById]="workById$ | async"
-    [result]="(result$ | async) || []"
-    [resultCount]="(resultCount$ | async) || 0"
+    [results]="(results$ | async) || []"
     (onClick)="onClick($event)"
   ></app-result-list>
 </ng-container>
