--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isLoaded$ | async">
+<ng-container *ngIf="!(isLoading$ | async)">
   <app-result-list
     [workById]="workById$ | async"
     [results]="(results$ | async) || []"
