feat: add accept button so works selection menu

--- a/src/app/search/presentational/simple-input/simple-input.component.html
+++ b/src/app/search/presentational/simple-input/simple-input.component.html
@@ -33,5 +33,6 @@
   <app-checkbox-works-menu
     [nodes]="nodes"
     (selectionChangeEmitter)="onWorksChange($event)"
+    (closeEmitter)="showWorksMenu = false"
   ></app-checkbox-works-menu>
 </p-dialog>
