--- a/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
+++ b/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
@@ -1,20 +1,30 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
     <div class="flex justify-content-between mb-2">
-      <p-button
-        class="mr-2"
-        styleClass="p-button-sm"
-        icon="pi pi-plus"
-        [label]="'SEARCH.INPUT.SELECT_WORKS_ALL' | translate"
-        (onClick)="onSelectAll()"
-      ></p-button>
+      <div>
+        <p-button
+          class="mr-2"
+          styleClass="p-button-sm"
+          icon="pi pi-plus"
+          [label]="'SEARCH.INPUT.SELECT_WORKS_ALL' | translate"
+          (onClick)="onSelectAll()"
+        ></p-button>
+
+        <p-button
+          styleClass="p-button-sm"
+          icon="pi pi-minus"
+          [label]="'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate"
+          (onClick)="onRemoveAll()"
+        ></p-button>
+      </div>
 
       <p-button
         styleClass="p-button-sm"
-        icon="pi pi-minus"
-        [label]="'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate"
-        (onClick)="onRemoveAll()"
-      ></p-button>
+        icon="pi pi-check"
+        [label]="'SEARCH.INPUT.ACCEPT' | translate"
+        (onClick)="onClose()"
+      >
+      </p-button>
     </div>
 
     <p-tree
