--- a/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
+++ b/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
@@ -1,42 +1,36 @@
-<div class="flex justify-content-center">
-  <div class="max-w-600">
-    <div class="flex justify-content-between mb-2">
-      <div>
-        <p-button
-          class="mr-2"
-          styleClass="p-button-sm"
-          icon="pi pi-plus"
-          [label]="'SEARCH.INPUT.SELECT_WORKS_ALL' | translate"
-          (onClick)="onSelectAll()"
-        ></p-button>
-
-        <p-button
-          styleClass="p-button-sm"
-          icon="pi pi-minus"
-          [label]="'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate"
-          (onClick)="onRemoveAll()"
-        ></p-button>
-      </div>
+<p-dialog [visible]="visible" (visibleChange)="onClose()" [modal]="true">
+  <ng-template pTemplate="header">
+    <div class="justify-content-left">
+      <p-button
+        class="mr-2"
+        styleClass="p-button-sm"
+        icon="pi pi-plus"
+        [label]="'SEARCH.INPUT.SELECT_WORKS_ALL' | translate"
+        (onClick)="onSelectAll()"
+      ></p-button>
 
       <p-button
         styleClass="p-button-sm"
-        icon="pi pi-check"
-        [label]="'SEARCH.INPUT.ACCEPT' | translate"
-        (onClick)="onClose()"
-      >
-      </p-button>
+        icon="pi pi-minus"
+        [label]="'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate"
+        (onClick)="onRemoveAll()"
+      ></p-button>
     </div>
+  </ng-template>
 
-    <p-tree
-      [value]="nodes"
-      [filter]="true"
-      filterMode="strict"
-      selectionMode="checkbox"
-      (selectionChange)="onSelectionChange($event)"
-    >
-      <ng-template pTemplate="default" let-node>
-        {{ node.label | translate }}
-      </ng-template>
-    </p-tree>
+  <div class="flex justify-content-center">
+    <div class="max-w-600">
+      <p-tree
+        [value]="nodes"
+        [filter]="true"
+        filterMode="strict"
+        selectionMode="checkbox"
+        (selectionChange)="onSelectionChange($event)"
+      >
+        <ng-template pTemplate="default" let-node>
+          {{ node.label | translate }}
+        </ng-template>
+      </p-tree>
+    </div>
   </div>
-</div>
+</p-dialog>
