feat: improve search input interface

--- a/src/app/common/shared/input-group/input-group.component.html
+++ b/src/app/common/shared/input-group/input-group.component.html
@@ -9,7 +9,7 @@
     <ng-content></ng-content>
   </div>
 
-  <div class="col-1 mt-3">
+  <div class="col-1 mt-3 flex justify-content-center">
     <i
       class="pi pi-info-circle"
       pTooltip="{{ i18nString + '_INFO' | translate }}"
