--- a/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
+++ b/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
@@ -5,14 +5,14 @@
         class="mr-2"
         styleClass="p-button-sm"
         icon="pi pi-plus"
-        [label]="'SEARCH.INPUT.SELECT_WORKS_ALL' | translate"
+        [label]="'SEARCH.INPUT.WORKS_ADVANCED_SELECT_ALL' | translate"
         (onClick)="onSelectAll()"
       ></p-button>
 
       <p-button
         styleClass="p-button-sm"
         icon="pi pi-minus"
-        [label]="'SEARCH.INPUT.SELECT_WORKS_NOTHING' | translate"
+        [label]="'SEARCH.INPUT.WORKS_ADVANCED_REMOVE_ALL' | translate"
         (onClick)="onRemoveAll()"
       ></p-button>
     </div>
