--- a/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
@@ -9,7 +9,7 @@
   <div class="flex justify-content-end">
     <p-button
       styleClass="p-button-secondary"
-      [routerLink]="['/read/text/', workId]"
+      [routerLink]="['/read/text/', info.workId]"
       fragment="paragraph-{{ info.match.paragraphId }}"
       pTooltip="{{ 'SEARCH.RESULTS.GO_TO_TEXT_TOOLTIP' | translate }}"
     >
