--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,13 @@
 <div class="mb-2"></div>
 
 <router-outlet></router-outlet>
+
+<p-button
+  class="ks-scroll-to-top"
+  styleClass="p-button-rounded p-button-secondary p-button-sm"
+  icon="pi pi-chevron-up"
+  (click)="scrollTop()"
+  pTooltip="{{ 'COMMON.SCROLL_TOP_TOOLTIP' | translate }}"
+  [showDelay]="500"
+  *ngIf="showButton"
+></p-button>
