--- a/src/styles.less
+++ b/src/styles.less
@@ -70,6 +70,22 @@ body {
   font-weight: 700;
 }
 
+.ks-scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+
+.ks-scroll-to-top:hover {
+  opacity: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
