--- a/src/app/search/container/search/search.component.html
+++ b/src/app/search/container/search/search.component.html
@@ -1,11 +1,11 @@
 <div class="flex justify-content-center">
   <div class="w-full max-w-600">
-    <app-simple-input
+    <app-basic-input
       [nodes]="(nodes$ | async) || []"
       (simpleInputEmitter)="onSimpleInputChange($event)"
       (worksEmitter)="onWorksChange($event)"
       (doSearchEmitter)="onSearch()"
-    ></app-simple-input>
+    ></app-basic-input>
 
     <p-button
       styleClass="w-full"
