feat: enable submit by pressing enter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 
 <router-outlet></router-outlet>
 
+<div class="mb-8"></div>
+
 <p-button
   class="ks-scroll-to-top"
   styleClass="p-button-rounded p-button-secondary p-button-sm"
