feat: add de translation

--- a/src/app/search/presentational/result-item/result-item.component.html
+++ b/src/app/search/presentational/result-item/result-item.component.html
@@ -4,12 +4,7 @@
       <div class="flex justify-content-between">
         <div>{{ workTitle }} #{{ index }}</div>
 
-        <div>
-          {{
-            "SEARCH.RESULTS.PAGES"
-              | translate : { pages: match.pages.join(", ") }
-          }}
-        </div>
+        <div>[{{ match.pages.join(", ") }}]</div>
       </div>
     </ng-template>
 
