--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,9 @@ body {
   padding: 1;
   padding-bottom: 1px;
 }
+.p-card .p-card-body {
+  padding-top: 0;
+}
 .p-card .p-card-content {
   padding: 0;
 }
@@ -22,7 +25,6 @@ body {
 .max-w-600 {
   max-width: 600px;
 }
-
 .max-w-680 {
   max-width: 680px;
 }
@@ -31,7 +33,6 @@ body {
   font-size: 0.75rem;
   color: var(--surface-500);
 }
-
 .ks-pagination-m {
   color: var(--surface-500);
 }
@@ -39,7 +40,6 @@ body {
 .ks-highlight {
   font-weight: 700;
 }
-
 .ks-h {
   font-size: 1.5rem;
   font-weight: 700;
@@ -48,23 +48,18 @@ body {
 .ks-i {
   font-style: italic;
 }
-
 .ks-b {
   font-weight: 700;
 }
-
 .ks-u {
   text-decoration-line: underline;
 }
-
 .ks-st {
   text-decoration-line: line-through;
 }
-
 .ks-er1 {
   color: var(--primary-color);
 }
-
 .ks-er2 {
   color: var(--primary-color);
   font-weight: 700;
@@ -81,7 +76,6 @@ body {
   opacity: 0.7;
   transition: opacity 0.3s;
 }
-
 .ks-scroll-to-top:hover {
   opacity: 1;
 }
