--- a/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
@@ -4,7 +4,7 @@
   (onHide)="onHide()"
   header="{{ info.workTitle }} #{{ info.index }}"
 >
-  <div class="max-w-600" [innerHTML]="info.match.text | normalMode"></div>
+  <div class="max-w-600 mb-3" [innerHTML]="info.match.text | normalMode"></div>
 
   <div class="flex justify-content-end">
     <p-button
