--- a/src/app/search/presentational/result-item/result-item.component.html
+++ b/src/app/search/presentational/result-item/result-item.component.html
@@ -2,9 +2,15 @@
   <p-card>
     <ng-template pTemplate="subtitle">
       <div class="flex justify-content-between">
-        <div>{{ workTitle }} #{{ index }}</div>
+        <div class="mt-3">
+          {{ workTitle }} #{{ index }}
 
-        <div>[{{ match.pages.join(", ") }}]</div>
+          [{{ match.pages.join(", ") }}]
+        </div>
+
+        <div class="mt-2">
+          <app-link-button [anchor]="anchor"></app-link-button>
+        </div>
       </div>
     </ng-template>
 
