fix: fix full text navigation

--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -18,4 +18,5 @@
 <app-paragraph-dialog
   [(isVisible)]="showParagraph"
   [info]="matchInfo"
+  (navigateEmitter)="onFullTextNavigation($event)"
 ></app-paragraph-dialog>
