fix: add hover shadow to button CSS

--- a/src/app/common/shared/link-button/link-button.component.less
+++ b/src/app/common/shared/link-button/link-button.component.less
@@ -5,9 +5,13 @@
   justify-content: center;
   width: 2rem;
   height: 2rem;
-  color: #a6a6a6;
+  color: #c8c8c8;
   background: transparent;
   border: 1px solid #c8c8c8;
   border-radius: 6px;
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+}
+
+.anchor-button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
