--- a/src/app/search/presentational/resuls-input/resuls-input.component.html
+++ b/src/app/search/presentational/resuls-input/resuls-input.component.html
@@ -1,23 +1,18 @@
-<div class="grid">
-  <div class="col-11">
-    <input
-      pInputText
-      id="search-terms-input"
-      class="w-full mr-2"
-      type="text"
-      placeholder="{{ 'SEARCH.INPUT.SEARCH_STRING_PLACEHOLDER' | translate }}"
-      [(ngModel)]="searchString"
-      (keyup.enter)="onSearchUpdate()"
-    />
-  </div>
+<div class="flex">
+  <input
+    pInputText
+    id="search-terms-input"
+    class="flex-grow-1 mr-2"
+    type="text"
+    placeholder="{{ 'SEARCH.INPUT.SEARCH_STRING_PLACEHOLDER' | translate }}"
+    [(ngModel)]="searchString"
+    (keyup.enter)="onSearchUpdate()"
+  />
 
-  <div class="col-1">
-    <p-button
-      icon="pi pi-replay"
-      styleClass="p-button-sm w-full"
-      pTooltip="{{ 'SEARCH.RESULTS.UPDATE_SEARCH_INPUT' | translate }}"
-      [disabled]="!searchString"
-      (onClick)="onSearchUpdate()"
-    ></p-button>
-  </div>
+  <p-button
+    icon="pi pi-replay"
+    pTooltip="{{ 'SEARCH.RESULTS.UPDATE_SEARCH_INPUT' | translate }}"
+    [disabled]="!searchString"
+    (onClick)="onSearchUpdate()"
+  ></p-button>
 </div>
