--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,15 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0.2rem;
+}
+
 .p-card .p-card-body {
   padding: 1;
   padding-bottom: 1px;
@@ -22,6 +31,9 @@ body {
   padding: 0;
 }
 
+.max-w-550 {
+  max-width: 550px;
+}
 .max-w-600 {
   max-width: 600px;
 }
@@ -38,30 +50,6 @@ body {
 }
 
 .ks-highlight {
-  font-weight: 700;
-}
-.ks-h {
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.ks-i {
-  font-style: italic;
-}
-.ks-b {
-  font-weight: 700;
-}
-.ks-u {
-  text-decoration-line: underline;
-}
-.ks-st {
-  text-decoration-line: line-through;
-}
-.ks-er1 {
-  color: var(--primary-color);
-}
-.ks-er2 {
-  color: var(--primary-color);
   font-weight: 700;
 }
 
