feat: update footnote reference style

--- a/src/styles.less
+++ b/src/styles.less
@@ -48,9 +48,9 @@ h6 {
 .ks-pagination-m {
   color: var(--surface-500);
 }
-
-.ks-highlight {
-  font-weight: 700;
+.ks-fn-ref {
+  font-size: 0.8rem;
+  font-style: italic;
 }
 
 .ks-scroll-to-top {
