--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -8,7 +8,9 @@
       (onNodeSelect)="onNodeSelect($event)"
     >
       <ng-template pTemplate="default" let-node>
-        {{ node.label | translate }}
+        <span (click)="onClick(node)">
+          {{ node.label | translate }}
+        </span>
       </ng-template>
     </p-tree>
   </div>
