--- a/src/app/app/startpage/startpage.component.html
+++ b/src/app/app/startpage/startpage.component.html
@@ -1,1 +1,5 @@
-<p>{{ "STARTPAGE.TEXT" | translate }}</p>
+<div class="flex justify-content-center">
+  <div class="max-w-550">
+    <p>{{ "STARTPAGE.TEXT" | translate }}</p>
+  </div>
+</div>
