--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -1,10 +1,10 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
     <ng-container *ngIf="!(isLoading$ | async)">
-      <app-resuls-input
+      <app-results-input
         [searchString]="(searchString$ | async) || ''"
         (onUpdateEmitter)="onUpdate($event)"
-      ></app-resuls-input>
+      ></app-results-input>
 
       <app-result-list
         [workById]="workById$ | async"
