test: fix tests

--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -10,7 +10,7 @@
       <div id="results-{{ result.workId }}"></div>
 
       <p-divider align="center">
-        <b>{{ getWorkTitle(result.workId) }}</b>
+        <b>{{ "WORKS." + getWorkTitle(result.workId) | translate }}</b>
       </p-divider>
     </div>
 
